[gd_scene load_steps=24 format=2]

[ext_resource path="res://core/inventory/icons/food/coffee.png" type="Texture" id=1]
[ext_resource path="res://core/inventory/icons/food/soup.png" type="Texture" id=2]
[ext_resource path="res://interface/items/ItemIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/items/ItemIcon.gd" type="Script" id=4]
[ext_resource path="res://interface/default.theme" type="Theme" id=5]
[ext_resource path="res://interface/theme/panel/panel.stylebox" type="StyleBox" id=6]
[ext_resource path="res://core/inventory/icons/food/spaghetti.png" type="Texture" id=7]
[ext_resource path="res://interface/menus/MenuTitle.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/menus/shared/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://core/inventory/icons/equipment/lightbulb.png" type="Texture" id=10]
[ext_resource path="res://core/inventory/icons/equipment/pickaxe.png" type="Texture" id=11]
[ext_resource path="res://core/inventory/icons/tradables/ticket.png" type="Texture" id=12]
[ext_resource path="res://core/inventory/icons/tradables/flower.png" type="Texture" id=13]
[ext_resource path="res://core/inventory/icons/resources/woodplank.png" type="Texture" id=14]
[ext_resource path="res://core/inventory/icons/equipment/hoe.png" type="Texture" id=15]
[ext_resource path="res://core/inventory/icons/equipment/blender.png" type="Texture" id=16]
[ext_resource path="res://core/inventory/icons/equipment/fryingpan.png" type="Texture" id=17]
[ext_resource path="res://core/inventory/icons/tradables/feather.png" type="Texture" id=18]
[ext_resource path="res://core/inventory/icons/tradables/present.png" type="Texture" id=19]
[ext_resource path="res://core/inventory/icons/food/mushroom.png" type="Texture" id=20]
[ext_resource path="res://core/inventory/icons/equipment/note.png" type="Texture" id=21]
[ext_resource path="res://core/inventory/icons/equipment/hatchet.png" type="Texture" id=22]

[sub_resource type="GDScript" id=1]
script/source = "tool
extends Control

export(String) var title = \"Title\" setget set_title

onready var label = $Label
func _ready():
	set_title(title)

func set_title(string):
	title = string
	if not label:
		return
	label.text = string
"

[node name="Crafting" type="VBoxContainer"]
margin_left = 1232.0
margin_right = 1832.0
margin_bottom = 944.0
theme = ExtResource( 5 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" type="Panel" parent="." instance=ExtResource( 8 )]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 80 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
title = "Crafting"

[node name="CraftingPanel" type="VBoxContainer" parent="."]
margin_top = 80.0
margin_right = 600.0
margin_bottom = 912.0
rect_min_size = Vector2( 600, 800 )

[node name="Crafting" type="Panel" parent="CraftingPanel"]
margin_right = 600.0
margin_bottom = 536.0
rect_min_size = Vector2( 600, 536 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CraftingPanel/Crafting"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftableItems" type="Label" parent="CraftingPanel/Crafting/VBoxContainer"]
margin_right = 600.0
margin_bottom = 27.0
custom_styles/normal = ExtResource( 6 )
text = "Craftable Items"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="CraftingPanel/Crafting/VBoxContainer"]
margin_top = 43.0
margin_right = 600.0
margin_bottom = 111.0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="Button" parent="CraftingPanel/Crafting/VBoxContainer/Grid" instance=ExtResource( 3 )]
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon2" type="Button" parent="CraftingPanel/Crafting/VBoxContainer/Grid" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 21 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon3" type="Button" parent="CraftingPanel/Crafting/VBoxContainer/Grid" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 212.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon4" type="Button" parent="CraftingPanel/Crafting/VBoxContainer/Grid" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 284.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftButton" type="Button" parent="CraftingPanel" instance=ExtResource( 9 )]
margin_left = 250.0
margin_top = 552.0
margin_right = 350.0
margin_bottom = 616.0
rect_min_size = Vector2( 100, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Crafft"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirementsList" type="Panel" parent="CraftingPanel"]
margin_top = 632.0
margin_right = 600.0
margin_bottom = 832.0
rect_min_size = Vector2( 600, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CraftingPanel/RequirementsList"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequirmentsLabel" type="Label" parent="CraftingPanel/RequirementsList/VBox"]
margin_right = 600.0
margin_bottom = 27.0
custom_styles/normal = ExtResource( 6 )
text = "Crafting Requirments"
align = 1

[node name="Grid" type="GridContainer" parent="CraftingPanel/RequirementsList/VBox"]
margin_top = 43.0
margin_right = 600.0
margin_bottom = 183.0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 10 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon2" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 16 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon3" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 212.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 15 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon4" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 284.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 22 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon5" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 288.0
margin_right = 356.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 18 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon6" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 360.0
margin_right = 428.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 11 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon7" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 432.0
margin_right = 500.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 12 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon8" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 504.0
margin_right = 572.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 14 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon9" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 17 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon10" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 13 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon11" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 20 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon12" type="Button" parent="CraftingPanel/RequirementsList/VBox/Grid" instance=ExtResource( 3 )]
margin_left = 216.0
margin_top = 72.0
margin_right = 284.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 5 )
icon = ExtResource( 19 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon" to="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon2" to="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon2" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon3" to="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon3" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon4" to="CraftingPanel/Crafting/VBoxContainer/Grid/ItemIcon4" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon2" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon2" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon3" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon3" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon4" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon4" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon5" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon5" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon6" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon6" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon7" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon7" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon8" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon8" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon9" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon9" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon10" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon10" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon11" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon11" method="_on_ItemIcon_pressed"]
[connection signal="pressed" from="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon12" to="CraftingPanel/RequirementsList/VBox/Grid/ItemIcon12" method="_on_ItemIcon_pressed"]
